fix alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,32 @@
   display: flex;
   justify-content: center;
 }
-.card{
-  width: 150px;
+.card, .front, .back{
+  width: 140px;
   height: 200px;
-  margin: 10px;
-  transition: all 1s ease-in-out;
+}
+.card{
+  margin: 5px;
+  transition: 0.6s;
+  transform-style: preserve-3d;
+  position: relative;
   background-color: red;
-  background-image: url('../assets/back.jpg');
-  background-size: cover;
+}
+.front, .back{
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  position: absolute;
+}
+.back{
+  border: 2px solid black;
+  border-radius: 20px;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+}
+.front{
+  backface-visibility: hidden;
+  border: 2px solid black;
+  border-radius: 20px;
+  text-align: center;
 }
